--- a/mission/index.html
+++ b/mission/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission</title>
     <link rel="stylesheet" href="mission.css" />
+    <script src="mission.js" defer></script>
+
 </head>
+
 <body>
+    <div class="theme-switcher">
+        <label for="theme">Choose Theme:</label>
+        <select id="theme">
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+        </select>
+    </div>
     <div class="content">
     <header class="title">
         <h1>Mission Statement</h1>
@@ -43,4 +53,5 @@
     </footer>
     </div>
 </body>
+    
 </html>
