--- a/blogsite/index.html
+++ b/blogsite/index.html
@@ -44,39 +44,6 @@
             </select>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const articles = [
-                {
-                    id: 1,
-                    title: 'Septimus Heap Book One: Magyk',
-                    date: 'July 5, 2022',
-                    description:
-                        'If you enjoy stories about seventh sons of seventh sons and magyk this is the book for you.',
-                    imgSrc: 'https://upload.wikimedia.org/wikipedia/en/5/5f/Magkycover2.jpg',
-                    imgAlt: 'Book cover for Septimus Heap 1',
-                    ages: '10-14',
-                    genre: 'Fantasy',
-                    stars: '****'
-                }
-            ];
-            
-            const article = articles.find(a => a.id === 1);
-            if (article) {
-                document.getElementById("left-column").innerHTML = `
-                    <p><strong>Date:</strong> ${article.date}</p>
-                    <p><strong>Ages:</strong> ${article.ages}</p>
-                    <p><strong>Genre:</strong> ${article.genre}</p>
-                    <p><strong>Stars:</strong> ${article.stars}</p>
-                `;
-                
-                document.getElementById("center-column").innerHTML = `
-                    <h2>${article.title}</h2>
-                    <img src="${article.imgSrc}" alt="${article.imgAlt}">
-                    <p>${article.description}</p>
-                `;
-            }
-        });
-    </script>
+    <script src="blog.js"></script>
 </body>
 </html>
