--- a/recipes/index.html
+++ b/recipes/index.html
@@ -4,7 +4,7 @@
     <meta property="og:title" content="Recipes">
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A page of recipes">
-    <meta property="og:image" content="img" src="german-gooseberry-cake.jpg">
+    <meta property="og:image" content="img/german-gooseberry-cake.jpg">
     <meta property="og:url" content="URL of the page">
     <meta name="twitter:card" content="Here are plenty of recipes for all">
     <meta charset="UTF-8">
@@ -25,11 +25,11 @@
 
     <main class="container">
         <section id="recipe-pictures">
-            <!-- JavaScript can insert images here -->
+            
         </section>
 
         <section id="recipe-content">
-            <!-- JavaScript will populate recipes here -->
+            
         </section>
     </main>
 
@@ -37,39 +37,5 @@
         <p>Recipe icons by <a href="https://www.flaticon.com/free-icons/recipe">Freepik - Flaticon</a></p>
     </footer>
     <script src="recipes.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const recipeImagesSection = document.querySelector("#recipe-images");
-            const recipeContentSection = document.querySelector("#recipe-container");
-
-            recipes.forEach(recipe => {
-                // Create and insert images
-                const img = document.createElement("img");
-                img.src = recipe.image;
-                img.alt = recipe.name;
-                recipeImagesSection.appendChild(img);
-
-                // Create and insert recipe content
-                const recipeDiv = document.createElement("div");
-                recipeDiv.classList.add("recipe");
-                recipeDiv.innerHTML = `
-                    <h2>${recipe.name}</h2>
-                    <p><strong>Author:</strong> ${recipe.author}</p>
-                    <p><strong>Description:</strong> ${recipe.description}</p>
-                    <p><strong>Rating:</strong> ${recipe.rating} stars</p>
-                    <p><strong>Cook Time:</strong> ${recipe.cookTime}</p>
-                    <h3>Ingredients</h3>
-                    <ul>
-                        ${recipe.recipeIngredient.map(ingredient => `<li>${ingredient}</li>`).join('')}
-                    </ul>
-                    <h3>Instructions</h3>
-                    <ol>
-                        ${recipe.recipeInstructions.map(instruction => `<li>${instruction}</li>`).join('')}
-                    </ol>
-                `;
-                recipeContentSection.appendChild(recipeDiv);
-            });
-        });
-    </script>
 </body>
 </html>
