Final is fully done and ready to submit

--- a/agames/index.html
+++ b/agames/index.html
@@ -20,7 +20,7 @@
     <section class="intro">
         <div class="intro-text">
             <h2>What is this website for?</h2>
-            <p>Here you can choose from a selection of 3 games to play. The instructions are in each game after they are selected, so have fun!</p>
+            <p>Here you can play a selection of 3 games, Chess, Uno, and Jeopardy. Each page has its own dedicated game complete with instructions. You can freely choose from each at anytime. Chess and Jeopardy are meant to be played with friends, while Uno has you pitted against an AI opponent. What are you waiting for? Pick one!</p>
         </div>
         <div class="intro-image">
             <img src="images/logo.png" alt="Logo">
@@ -51,7 +51,7 @@
 
     <section class="community">
         <h2>What is the Final Plan?</h2>
-        <p>This website will have 3 working games, 2 of which are you against an AI, and the final one is a trivia combined with other things to make it difficult.</p>
+        <p>To have fun playing games on this site!</p>
         <div class="community-image">
             <img src="https://via.placeholder.com/400x300" alt="Community">
         </div>
